styles/messenger.css
#chat-controls .lame-messenger {
  flex: 0 0 24px;
}

#lame-messenger {
  /* center all elements */
  text-align: center;
}

/* TODO: Try this.
#lame-messenger .users {
  display: flex;
}*/

#lame-messenger .users ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#lame-messenger .users li {
  margin-bottom: 10px;
}

#lame-messenger .users li:last-child {
  margin-bottom: 0;
}

#lame-messenger .users input[type="checkbox"][class~="user-checkmark"] {
  display: none;
}

#lame-messenger .users label {
  display: block;
  position: relative;
  /* padding: 10px;
  margin: 10px; */
  cursor: pointer;
}

#lame-messenger .users label:before {
  background-color: white;
  color: white;
  content: " ";
  display: block;
  border-radius: 50%;
  border: 1px solid green;
  position: absolute;
  top: -5px;
  left: -5px;
  width: 25px;
  height: 25px;
  text-align: center;
  line-height: 28px;
  transform: scale(0);
  z-index: 1;
}

#lame-messenger .users label img {
  height: 75px;
  width: 75px;
  transform-origin: 50% 50%;
  border-width: 2px;
  border-style: ridge;
}

#lame-messenger .users :checked + label {
  border-color: #ddd;
}

#lame-messenger .users :checked + label:before {
  content: "✓";
  background-color: green;
  transform: scale(1);
  font-weight: bold;
}

#lame-messenger .users :checked + label img {
  transform: scale(0.9);
  box-shadow: 0 0 5px #333;
  z-index: -1;
  border-style: inset;
}

#lame-messenger .users .offline label {
  opacity: 0.5;
  cursor: not-allowed;
}

#lame-messenger .users .offline label img {
  border-style: dotted;
}

#lame-messenger .history {
  flex: 1 1 auto;
}

#lame-messenger .message {
  flex: 0 1 auto;
  margin: 10px 0;
}

#lame-messenger button.send {
  border: 2px groove;
}

#lame-messenger .users {
  float: left;
  width: 90px; /* could be 75px without scrollbar */
  max-height: 626px; /* 6 players */
  margin-right: 8px; /* same as application window's inner padding */
  overflow-y: auto;
}

#lame-messenger .chat-elements {
  display: flex;
  flex-flow: column;
  min-height: 626px; /* Applies to 6 players and more. */
}
body.vtt:has(#lame-messenger .users.no-users-to-show) #lame-messenger .chat-elements,
body.vtt:has(#lame-messenger .users li:first-child:nth-last-child(1)) #lame-messenger .chat-elements,
body.vtt:has(#lame-messenger .users li:first-child:nth-last-child(2)) #lame-messenger .chat-elements,
body.vtt:has(#lame-messenger .users li:first-child:nth-last-child(3)) #lame-messenger .chat-elements {
  min-height: 308px;
}
body.vtt:has(#lame-messenger .users li:first-child:nth-last-child(4)) #lame-messenger .chat-elements {
  min-height: 414px;
}
body.vtt:has(#lame-messenger .users li:first-child:nth-last-child(5)) #lame-messenger .chat-elements {
  min-height: 520px;
}

#lame-messenger textarea {
  resize: none;
}

